Fixed alignment issues on index page

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
 div#intro  {
 	color: white;
 	font-size: 100px;
+	text-align:center;
 }
 div#intro a {
 	font-size: 100px;
@@ -62,27 +63,34 @@ div#navBar a.active {
 /* constants */
 .smallContent {
 	width: 850px;
-	margin: auto;
-	margin-left:-17%;
+	align-items:center;
 }
 .centerContent{
-	margin-left:2%;
+	margin:auto;
+	display:block;
+	min-width:800px;
+	max-width:1250px;
 }
 .centerContent p{
 	max-width:800px;
-	margin-top:10%;
 	font-size:50px;
-	margin-left:27%;
-	text-align:center;
+	margin-left:-10%;
 }
 .centerContent h1{
 	font-size:50px;
-	margin-left:42%;
 	text-decoration:none;
 }
-.centerContent1 {
-	margin-left:60%;
-	margin-top:3%;
+.centerContent td{
+	margin-right:-30%;
+}
+.centerContent img{
+	margin-left:-100%;
+	margin-top:20%;
+}
+.centerContent2 {
+	text-align:center;
+	font-size:50px;
+	margin-left:15%;
 }
 #body{
 	font-size:50px;
